--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Alebard.github.io/tatitneft",
+  "homepage": "https://alebard.github.io/tatitneft/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
